Fixed missing border on 'order children' button in page settings

--- a/src/css/boom/page/settings.less
+++ b/src/css/boom/page/settings.less
@@ -122,7 +122,7 @@
 				}
 			}
 
-			&.b-button-withtext {
+			&.b-button-withtext, &.b-button-textonly {
 				border: 1px solid @light-grey;
 				min-width: 15rem;
 
